--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-intl": "^3.26.3",
     "next-sanity": "^9.8.42",
     "next-themes": "^0.4.4",
+    "primeicons": "^7.0.0",
     "primereact": "^10.9.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
